[project]
name = "csv2ical"
description = "A CLI tool that converts a CSV file with event details into an iCalendar ICS file. The ICS file can then be imported into apps like Google Calendar, Outlook, macOS Calendar and etc."
authors = [{ name = "Rick Lan", email = "rlan@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "icalendar>=4.0.1",
]
dynamic = [ "version" ]

[project.scripts]
csv2ical = "csv2ical.cli:main"

[project.urls]
homepage = "https://github.com/rlan/csv2ical"
repository = "https://github.com/rlan/csv2ical"
documentation = "https://github.com/rlan/csv2ical"
"Bug Tracker" = "https://github.com/rlan/csv2ical/issues"


[tool.hatch.envs.hatch-test.scripts]
run = "csv2ical sample.csv test.ics && diff sample.ics test.ics"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]


[tool.hatch.version]
path = "src/csv2ical/__version__.py"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
